blog box wrapping fixes

--- a/css/index.css
+++ b/css/index.css
@@ -285,20 +285,24 @@ h2 {
 #post-box a {
 	height: 11rem;
 	width: 100%;
+	padding: 1.25rem;
 	display: flex;
 	text-align: center;
-	justify-content: space-around;
+	flex-direction: column;
+	justify-content: space-between;
 	border: .3rem solid black;
 	border-radius: 10px;
 	color: black;
-	line-height: 5rem;
+}
+#post-box a span {
+	line-height: 2rem;
 }
 a#most-recent-post {
 	width: 92%;
 	margin-right: 4%;
 	margin-left: 4%;
 	margin-bottom: 2%;
-	font-size: 2rem;
+	font-size: 2.15rem;
 	box-shadow: -2px 5px 5px dimgray;
 }
 a#second-recent-post {
